feat: harden settings persistence and leaderboard storage